Atualizando projeto e corrigindo inconsistências

--- a/store.html
+++ b/store.html
@@ -14,98 +14,7 @@
             <div class="store-form">
                 <h1 class="cafe-app-title">CafeApp - Menu</h1>
                 <div class="scrollable-section" id="store-section">
-                    <!-- Item 1 -->
-                    <div class="items">
-                        <div class="item-store" id="cafeLeite">
-                            <img src="images/cafeleite.png" alt="Café com Leite">
-                        </div>
-                        <div class="infos">
-                            <div class="info-store">
-                                <label class="items-label" for="cafeLeite">Café com Leite</label>
-                                <div class="inline-form">
-                                    <label for="quantityCafeLeite">Quantidade:</label>
-                                    <input type="number" id="quantityCafeLeite" name="quantityCafeLeite" value="0" min="0" onchange="updateTotal('cafeLeite', 5.00, 'totalCafeLeite')">
-                                </div>
-                                <div class="inline-form">
-                                    <label for="precoCafeLeite">Preço:</label>
-                                    <span id="precoCafeLeite">R$ 5.00</span>
-                                </div>
-                                <div class="inline-form">
-                                    <label for="totalCafeLeite">Total:</label>
-                                    <span id="totalCafeLeite">R$ 0,00</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Item 2 -->
-                    <div class="items">
-                        <div class="item-store" id="expresso">
-                            <img src="images/expresso.png" alt="Expresso">
-                        </div>
-                        <div class="infos">
-                            <div class="info-store">
-                                <label class="items-label" for="expresso">Expresso</label>
-                                <div class="inline-form">
-                                    <label for="quantityExpresso">Quantidade:</label>
-                                    <input type="number" id="quantityExpresso" name="quantityExpresso" value="0" min="0" onchange="updateTotal('expresso', 3.50, 'totalExpresso')">
-                                </div>
-                                <div class="inline-form">
-                                    <label for="precoExpresso">Preço:</label>
-                                    <span id="precoExpresso">R$ 3.50</span>
-                                </div>
-                                <div class="inline-form">
-                                    <label for="totalExpresso">Total:</label>
-                                    <span id="totalExpresso">R$ 0,00</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Item 3 -->
-                    <div class="items">
-                        <div class="item-store" id="mocha">
-                            <img src="images/mocha.png" alt="Mocha">
-                        </div>
-                        <div class="infos">
-                            <div class="info-store">
-                                <label class="items-label" for="mocha">Mocha</label>
-                                <div class="inline-form">
-                                    <label for="quantityMocha">Quantidade:</label>
-                                    <input type="number" id="quantityMocha" name="quantityMocha" value="0" min="0" onchange="updateTotal('mocha', 4.00, 'totalMocha')">
-                                </div>
-                                <div class="inline-form">
-                                    <label for="precoMocha">Preço:</label>
-                                    <span id="precoMocha">R$ 4.00</span>
-                                </div>
-                                <div class="inline-form">
-                                    <label for="totalMocha">Total:</label>
-                                    <span id="totalMocha">R$ 0,00</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Item 4 -->
-                    <div class="items">
-                        <div class="item-store" id="cha">
-                            <img src="images/cha.png" alt="Chá">
-                        </div>
-                        <div class="infos">
-                            <div class="info-store">
-                                <label class="items-label" for="cha">Chá</label>
-                                <div class="inline-form">
-                                    <label for="quantityCha">Quantidade:</label>
-                                    <input type="number" id="quantityCha" name="quantityCha" value="0" min="0" onchange="updateTotal('cha', 2.50, 'totalCha')">
-                                </div>
-                                <div class="inline-form">
-                                    <label for="precoCha">Preço:</label>
-                                    <span id="precoCha">R$ 2.50</span>
-                                </div>
-                                <div class="inline-form">
-                                    <label for="totalCha">Total:</label>
-                                    <span id="totalCha">R$ 0,00</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <!-- Itens da loja serão preenchidos dinamicamente pelo script.js -->
                 </div>
                 <div class="buttons">
                     <button class="button" onclick="buyItems()">Comprar</button>
