--- a/pedido.html
+++ b/pedido.html
@@ -11,22 +11,16 @@
 <body>
     <div class="container">
         <div class="phone">
-            <div class="login-form">
+            <div class="pedido-form">
                 <h1 class="cafe-app-title">CafeApp - Pedido</h1>
-
-                <div id="pedido-section">
-                    <!-- Aqui será preenchido dinamicamente pelo script.js -->
+                <div class="scrollable-section" id="pedido-section">
+                    <!-- Recibo será preenchido dinamicamente pelo script.js -->
                 </div>
-
-                <label class="info-label" for="user-info-label">Informações do Usuário</label>
-
-                <!-- Adicione campos para informações do usuário aqui -->
-
                 <div class="buttons">
-                    <button class="button" onclick="printOrder()">Confirmar Pedido</button>
-                    <button class="back-button" onclick="backToMenu()">Voltar</button>
+                    <button class="button" onclick="printOrder()">Imprimir</button>
+                    <button class="back-button" onclick="voltarAoStore()">Voltar</button>
+                    <button class="back-button" onclick="goBack()">Sair</button>
                 </div>
-
             </div>
         </div>
     </div>
