Arquivos Ajustados conforme necessidade.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/script.js" defer></script>
-    <title>Bem-vindo ao CafeApp</title>
+    <title>Bem-vindo ao CafeGourmet</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
             </div>
             <div class="text">
                 <p>Bem-vindo ao</p>
-                <p class="cafe-app">CafeApp</p>
+                <p class="cafe-app">CafeGourmet</p>
             </div>
             <a href="login.html" class="button">Iniciar</a>
         </div>
