--- a/store.html
+++ b/store.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/script.js" defer></script>
-    <title>Store - CafeApp</title>
+    <title>CafeGourmet - Menu</title>
 </head>
 
 <body>
     <div class="container">
         <div class="phone">
             <div class="store-form">
-                <h1 class="cafe-app-title">CafeApp - Menu</h1>
+                <h1 class="cafe-app-title">CafeGourmet - Menu</h1>
                 <div class="scrollable-section" id="store-section">
                     <!-- Itens da loja serão preenchidos dinamicamente pelo script.js -->
                 </div>
