--- a/cadastro.html
+++ b/cadastro.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/script.js" defer></script>
-    <title>Cadastro - CafeApp</title>
+    <title>Cadastro - CafeGourmet</title>
 </head>
 
 <body>
     <div class="container">
         <div class="phone">
             <div class="login-form">
-                <h1 class="cafe-app-title">CafeApp</h1>
+                <h1 class="cafe-app-title">CafeGourmet</h1>
 
                 <div class="scrollable-section" id="login-section">
                     <label class="info-label" for="login-info-label">Informações do Login</label>
