--- a/login.html
+++ b/login.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/script.js" defer></script>
-    <title>Login - CafeApp</title>
+    <title>CafeGourmet - Login</title>
 </head>
 
 <body>
     <div class="container">
         <div class="phone">
             <div class="login-form">
-                <h1 class="cafe-app-title">CafeApp</h1>
+                <h1 class="cafe-app-title">CafeGourmet</h1>
                 <div class="form-group">
                     <label for="email">Usuário/E-mail:</label>
                     <input type="text" id="email" name="email" placeholder="Digite seu e-mail" required>
